🆙 Upgrade project dependencies and Java version; refactor code for improved compatibility and performance